# sentry-django-settings

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox.yml
sentry/: apps.py
sentry_django_settings/: apps.py
tests/: conftest.py  test_sentry_app.py  test_sentry_django-settings.py  test_sentry_django_config.py
